能跑起来了，还有一些问题

--- a/projects/nuwa/src/lib/viewer/viewer.component.html
+++ b/projects/nuwa/src/lib/viewer/viewer.component.html
@@ -1,7 +1,1 @@
-<nuwa-render
-    [page]="page"
-    [mousewheel]="mousewheel"
-    [panning]="panning"
-    [full]="full"
-    [padding]="padding"
-></nuwa-render>
+<nuwa-render [project]="_project" [page]="page"></nuwa-render>
