--- a/projects/nuwa/src/lib/editor/components/components.component.html
+++ b/projects/nuwa/src/lib/editor/components/components.component.html
@@ -1,5 +1,5 @@
 <nz-collapse>
-    <nz-collapse-panel *ngFor="let w of collections; let f = first" [nzHeader]="w.name" [nzActive]="f">
+    <nz-collapse-panel *ngFor="let w of components; let f = first" [nzHeader]="w.name" [nzActive]="f">
         <div class="component" *ngFor="let c of w.components">
             <div class="icon">
                 <img [src]="'/nuwa/component/'+c.id+'/'+c.icon" alt="c.name" loading="lazy"/>
@@ -8,3 +8,4 @@
         </div>
     </nz-collapse-panel>
 </nz-collapse>
+<nz-empty *ngIf="!components" nzNotFoundContent="组件库为空"></nz-empty>
