--- a/projects/nuwa/src/lib/editor/galleries/galleries.component.html
+++ b/projects/nuwa/src/lib/editor/galleries/galleries.component.html
@@ -1,5 +1,8 @@
-<div class="component" *ngFor="let c of images" draggable="true" (dragstart)="onDragStart($event, c)">
-    <div class="icon" [title]="c">
-        <img [src]="'/nuwa/gallery/'+c" [alt]="c" loading="lazy"/>
-    </div>
-</div>
+<nz-collapse>
+    <nz-collapse-panel *ngFor="let w of galleries; let f = first" [nzHeader]="w.name" [nzActive]="f">
+        <div class="component" *ngFor="let c of w.images" draggable="true" (dragstart)="onDragStart($event, c.url)">
+            <img [src]="c.url" [alt]="c.name" [title]="c.name || c.url" loading="lazy"/>
+        </div>
+    </nz-collapse-panel>
+</nz-collapse>
+<nz-empty *ngIf="!galleries" nzNotFoundContent="相册为空"></nz-empty>
