--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<nuwa-editor [backgrounds]="backgrounds"></nuwa-editor>
+<nuwa-editor [backgrounds]="backgrounds" [ninePatches]="ninePatches"></nuwa-editor>
