图表组件可以配置了，但是好像不好用

--- a/projects/nuwa/src/lib/editor/background-setting/background-setting.component.html
+++ b/projects/nuwa/src/lib/editor/background-setting/background-setting.component.html
@@ -1,7 +1,7 @@
-<im-smart-editor [fields]="fields"
+<smart-editor [fields]="fields"
                  [values]="canvas.page?.background || {}"
                  (change)="onChange()"
-                 #editor></im-smart-editor>
+                 #editor></smart-editor>
 
 
 <button nz-button [nzType]="'primary'" (click)="isVisible=true">背景库</button>
