--- a/projects/nuwa/src/lib/editor/properties-setting/properties-setting.component.html
+++ b/projects/nuwa/src/lib/editor/properties-setting/properties-setting.component.html
@@ -1,3 +1,3 @@
 <p>组件：{{ component?.name }}</p>
 
-<im-smart-editor [fields]="fields" [values]="data" (change)="onChange()" #editor></im-smart-editor>
+<smart-editor [fields]="fields" [values]="data" (change)="onChange()" #editor></smart-editor>
