--- a/projects/nuwa/src/lib/editor/editor.component.html
+++ b/projects/nuwa/src/lib/editor/editor.component.html
@@ -15,8 +15,8 @@
             <nuwa-galleries *sideBarItem="'相册'" [canvas]="canvas" [galleries]="galleries"></nuwa-galleries>
         }
 
-        @if (ninePatches) {
-            <nuwa-nine-patch *sideBarItem="'点九图'" [canvas]="canvas" [galleries]="ninePatches"></nuwa-nine-patch>
+        @if (imageBorders) {
+            <nuwa-image-borders *sideBarItem="'图片边框'" [canvas]="canvas" [borders]="imageBorders"></nuwa-image-borders>
         }
 
         @if (canvas.graph?.getCellCount()) {
