--- a/projects/nuwa/src/lib/editor/properties-setting/properties-setting.component.html
+++ b/projects/nuwa/src/lib/editor/properties-setting/properties-setting.component.html
@@ -1,3 +1,7 @@
 <p>组件：{{ component?.name }}</p>
 
+<p>
+    名称：<input [(ngModel)]="name" (change)="onNameChange()">
+</p>
+
 <smart-editor [fields]="fields" [values]="data" (change)="onChange()" #editor></smart-editor>
