--- a/projects/nuwa/src/lib/editor/bindings/bindings.component.html
+++ b/projects/nuwa/src/lib/editor/bindings/bindings.component.html
@@ -1,2 +1,6 @@
+@if (fields.length) {
+    <smart-editor [fields]="fields" [values]="data" (change)="onChange()" #editor></smart-editor>
+} @else {
+    <nz-empty nzNotFoundContent="元素不支持绑定"></nz-empty>
+}
 
-<smart-editor [fields]="fields" [values]="data" (change)="onChange()" #editor></smart-editor>
