--- a/projects/nuwa/src/lib/editor/pages/pages.component.html
+++ b/projects/nuwa/src/lib/editor/pages/pages.component.html
@@ -17,4 +17,4 @@
 </nz-list>
 
 
-<button type="button" nz-button (click)="handleAdd()">创建新页面</button>
+<button type="button" nz-button nzType="primary" (click)="handleAdd()">创建新页面</button>
