添加脚本编辑功能

--- a/projects/nuwa/src/lib/editor/listener-setting/listener-setting.component.html
+++ b/projects/nuwa/src/lib/editor/listener-setting/listener-setting.component.html
@@ -1,1 +1,6 @@
 <smart-editor #editor [fields]="fields" [values]="data.listener"></smart-editor>
+
+<ng-template #scriptEditor let-control="control" let-field="field">
+    <ngx-codemirror [formControl]="control"
+                    [options]="{lineNumbers: true,theme: 'material',mode: 'javascript'}"></ngx-codemirror>
+</ng-template>
