--- a/projects/nuwa/src/lib/editor/toolbar/toolbar.component.html
+++ b/projects/nuwa/src/lib/editor/toolbar/toolbar.component.html
@@ -8,7 +8,7 @@
 </a>
 <nz-dropdown-menu #exportDropDownMenu="nzDropdownMenu">
     <ul nz-menu>
-        <li (click)="canvas.graph.exportSVG()" nz-menu-item>导出SVG</li>
+<!--        <li (click)="canvas.graph.exportSVG()" nz-menu-item>导出SVG</li>-->
         <li (click)="canvas.graph.exportPNG()" nz-menu-item>导出PNG</li>
         <li (click)="canvas.graph.exportJPEG()" nz-menu-item>导出JPEG</li>
         <li nz-menu-divider></li>
