--- a/projects/nuwa/src/lib/editor/widgets/widgets.component.scss
+++ b/projects/nuwa/src/lib/editor/widgets/widgets.component.scss
@@ -2,15 +2,6 @@
     user-select: none;
 }
 
-:host ::ng-deep {
-    .inner {
-        svg {
-            width: 24px !important;
-            height: 24px !important;
-        }
-    }
-}
-
 .component {
     //display: inline-block;
     display: flex;
@@ -43,7 +34,7 @@
         //font-size: 12px;
         //font-size: 11px;
         display: flex;
-        //align-items: center;
-        vertical-align: center;
+        align-items: center;
+        justify-content: center;
     }
 }
