--- a/projects/nuwa/src/lib/editor/widgets/widgets.component.scss
+++ b/projects/nuwa/src/lib/editor/widgets/widgets.component.scss
@@ -10,6 +10,10 @@
     border-bottom: 1px dashed grey;
     cursor: pointer;
 
+    &:first-child{
+        border-top: 1px dashed grey;
+    }
+
     .icon {
         width: 30px;
         height: 30px;
