--- a/projects/nuwa/src/lib/editor/bindings/bindings.component.html
+++ b/projects/nuwa/src/lib/editor/bindings/bindings.component.html
@@ -1,6 +1,10 @@
-@if (fields.length) {
-    <smart-editor [fields]="fields" [values]="data" (change)="onChange()" #editor></smart-editor>
+@if (cell) {
+    @if (fields.length) {
+        <smart-editor [fields]="fields" [values]="data" (change)="onChange()" #editor></smart-editor>
+    } @else {
+        <nz-empty nzNotFoundContent="元素不支持绑定"></nz-empty>
+    }
 } @else {
-    <nz-empty nzNotFoundContent="元素不支持绑定"></nz-empty>
+    <nz-empty nzNotFoundContent="未选中元素"></nz-empty>
 }
 
