--- a/projects/nuwa/src/lib/editor/variables/variables.component.html
+++ b/projects/nuwa/src/lib/editor/variables/variables.component.html
@@ -1,1 +1,1 @@
-<smart-editor #editor (change)="onChange()" [fields]="fields" [values]="project"></smart-editor>
+<smart-editor #editor (change)="onChange()" [fields]="fields" [values]="page"></smart-editor>
