--- a/projects/nuwa/src/lib/viewer/viewer.component.html
+++ b/projects/nuwa/src/lib/viewer/viewer.component.html
@@ -1,1 +1,1 @@
-<nuwa-render [page]="page" [project]="_project"></nuwa-render>
+<nuwa-render [project]="project" [values]="values" (event)="event.emit($event)"></nuwa-render>
