--- a/projects/nuwa/src/lib/editor/editor.component.html
+++ b/projects/nuwa/src/lib/editor/editor.component.html
@@ -1,4 +1,4 @@
-<nuwa-toolbar (onSave)="handleSave()" [(scale)]="scale" [canvas]="canvas"></nuwa-toolbar>
+<nuwa-toolbar (onSave)="handleSave()" [(scale)]="scale" [canvas]="canvas" [project]="project"></nuwa-toolbar>
 <div class="body">
     <nuwa-side-bar [index]="1" [width]="300">
 
