--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<nuwa-editor [backgrounds]="backgrounds" [imageBorders]="ninePatches"></nuwa-editor>
+<nuwa-editor [backgrounds]="backgrounds" [imageBorders]="ninePatches" [galleries]="galleries"></nuwa-editor>
