加入脚本支持

--- a/projects/nuwa/src/lib/editor/editor.component.html
+++ b/projects/nuwa/src/lib/editor/editor.component.html
@@ -27,6 +27,8 @@
         <!--        <nuwa-sources *sideBarItem="'数据源'"></nuwa-sources>-->
         <nuwa-variables *sideBarItem="'变量'" [page]="canvas.page"></nuwa-variables>
 
+        <nuwa-scripts *sideBarItem="'脚本'" [page]="canvas.page"></nuwa-scripts>
+
     </nuwa-side-bar>
     <div class="content">
         <nuwa-canvas #canvas [page]="project.pages[index]"
@@ -38,6 +40,5 @@
         <nuwa-cell-setting *sideBarItem="'元素属性'" [canvas]="canvas"></nuwa-cell-setting>
         <nuwa-bindings *sideBarItem="'数据绑定'" [canvas]="canvas"></nuwa-bindings>
         <nuwa-listeners *sideBarItem="'事件响应'" [canvas]="canvas" [project]="project"></nuwa-listeners>
-        <!--        <nuwa-scripts *sideBarItem="'脚本'"></nuwa-scripts>-->
     </nuwa-side-bar>
 </div>
